--- a/public/documentation.html
+++ b/public/documentation.html
@@ -45,7 +45,7 @@
 
                 <tbody> 
                     <tr>
-                        <td>Get a list of Movies</td>
+                        <td>Get a list of all Movies</td>
                         <td>/movies</td>
                         <td>GET</td>
                         <td>None</td>
@@ -53,7 +53,7 @@
                     </tr>
                     <tr>
                         <td>Get data about a single movie by name</td>
-                        <td>/movies/[Name]</td>
+                        <td>/movies/:Name</td>
                         <td>GET</td>
                         <td>None</td>
                         <td>A JSON object holding data about a single movie,
@@ -68,41 +68,75 @@
                             </td>
                     </tr>
                     <tr>
-                        <td>Add a Movie</td>
-                        <td>/movies</td>
-                        <td>POST</td>
-                        <td>A JSON object holding data about the student to add, structured like:
-                            {
-                            title : 'The Matrix',
-                            genres : {'Action', 'Science Fiction'}
-                            director: 'The Wachowskis',
-                            releasedYear: 1999
-                            }
-                        </td>
-                        <td>
-                            A JSON object holding data about the student that was added, including an ID:
-                            {
-                            id: 2,
-                            title : 'The Matrix',
-                            genres : {'Action', 'Science Fiction'}
-                            director: 'The Wachowskis',
-                            releasedYear: 1999
-                            }
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Remove a Movie by ID</td>
-                        <td>/movies/[ID]</td>
-                        <td>DELETE</td>
+                        <td>Return data about genre by name/title</td>
+                        <td>/genres/:genre</td>
+                        <td>GET</td>
                         <td>None</td>
-                        <td>A text message indicating whether the movie was successfully removed</td>
+                        <td>
+                            A JSON object holding data about the genre of the movie:
+                            {
+                            title : 'The Matrix',
+                            genres : {'Action', 'Science Fiction'}
+                            director: 'The Wachowskis',
+                            releasedYear: 1999
+                            }
+                        </td>
                     </tr>
                     <tr>
-                        <td>Update a Movie's genre</td>
-                        <td>/movies/[genre]</td>
+                        <td>Return data about a director (bio, birth year, death year) by name</td>
+                        <td>/directors/:directorName</td>
+                        <td>GET</td>
+                        <td>None</td>
+                        <td>A JSON object holding data about the genre of the movie:
+                            director: {
+                                Name:'Raphael Bob-Waksberg',
+                                Bio: 'American comedian, writer, producer, actor, and voice actor. He is known as the creator and showrunner of the Netflix animated comedy series BoJack Horseman and the Amazon Prime Video animated series Undone. ',
+                                Birth: 1984,
+                                Death: 'still alive',
+                              },
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Allow new user to register</td>
+                        <td>/users/:newUser</td>
+                        <td>POST</td>
+                        <td>None</td>
+                        <td>A text message indicating whether the user was successfully registrated</td>
+                    </tr>
+                    <tr>
+                        <td>Allow users to update their user information</td>
+                        <td>/users/:username</td>
                         <td>PUT</td>
                         <td>None</td>
-                        <td>A text message indicating whether the movie was successfully updated</td>
+                        <td>A text message indicating whether the user info was successfully updated</td>
+                    </tr>
+                    <tr>
+                        <td>Add new movie to list of favorite</td>
+                        <td>users/:favourites/:movieName</td>
+                        <td>POST</td>
+                        <td>None</td>
+                        <td>A text message indicating whether the movie list was successfully updated</td>
+                    </tr>
+                    <tr>
+                        <td>Delete movie from list of favourites </td>
+                        <td>users/:favourites/:movieName</td>
+                        <td>Delete</td>
+                        <td>None</td>
+                        <td>A text message indicating whether the movie was successfully deleted from the list of favourites</td>
+                    </tr>
+                    <tr>
+                        <td>Delete the user</td>
+                        <td>/users/:deleteUser</td>
+                        <td>DELETE</td>
+                        <td>None</td>
+                        <td>A text message indicating whether the user info was successfully deleted</td>
+                    </tr>
+                    <tr>
+                        <td>Allow users to update their user information</td>
+                        <td>/users/:username</td>
+                        <td>PUT</td>
+                        <td>None</td>
+                        <td>A text message indicating whether the user info was successfully updated</td>
                     </tr>
                 </tbody>
             </table>
