fix: add genres and directors twice to avoid confusion

--- a/public/documentation.html
+++ b/public/documentation.html
@@ -69,7 +69,7 @@
                     </tr>
                     <tr>
                         <td>Return data about genre by name/title</td>
-                        <td>/genres/:genre</td>
+                        <td>movies/genre/:genre</td>
                         <td>GET</td>
                         <td>None</td>
                         <td>
@@ -84,7 +84,7 @@
                     </tr>
                     <tr>
                         <td>Return data about a director (bio, birth year, death year) by name</td>
-                        <td>/directors/:directorName</td>
+                        <td>movies/director/:Name</td>
                         <td>GET</td>
                         <td>None</td>
                         <td>A JSON object holding data about the genre of the movie:
