--- a/public/documentation.html
+++ b/public/documentation.html
@@ -10,7 +10,7 @@
     <body>
         <h1>myMovies API Documentation</h1>
         <br>
-        <h2>App Desription</h2>
+        <h2>App Description</h2>
         <p>The complete server-side of this web application will consist of a well-designed REST API and
         architected database built using JavaScript, Node.js, Express, and MongoDB. The REST API
         will be accessed via commonly used HTTP methods like GET and POST. Similar methods
